# PyMigrate-Pro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build_exe.ps1  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ci.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
src/pymigrate_pro/: __init__.py  __main__.py  app.py  backend.py
